--- a/frontend/src/components/Contact/components/ContactInfo/ContactInfo.css
+++ b/frontend/src/components/Contact/components/ContactInfo/ContactInfo.css
@@ -1,6 +1,7 @@
 .ContactInfo {
   display: flex;
   flex-wrap: wrap;
+  max-width: 680px;
 }
 .ContactInfo__list {
   display: flex;
