--- a/frontend/src/components/Location/components/VenueInfo/VenueInfo.css
+++ b/frontend/src/components/Location/components/VenueInfo/VenueInfo.css
@@ -9,7 +9,6 @@
   display: flex;
   align-items: center;
   position: relative;
-  width: 100%;
   max-width: 1500px;
   height: 100%;
   margin: 0px auto;
